<resources>
    <string name="app_name">SocialNetwork</string>
    <string name="username">User Name</string>
    <string name="career">Career</string>
    <string name="home_address">Home address</string>
    <string name="auth_subtitle">Fill out the profile and go to the application!</string>
    <string name="auth_title">Let\'s get acquainted</string>
    <string name="remember_me">Remember Me</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="sign_in">Sign in</string>
    <string name="warning1">By clicking Register you agree to our Terms</string>
    <string name="warning2">and Conditions</string>
    <string name="register">REGISTER</string>
    <string name="google">GOOGLE</string>
    <string name="sign_up">Sign up</string>
    <string name="don_t_have_account">Don’t have account?</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="or">or</string>
    <string name="view_my_contacts">VIEW MY CONTACTS</string>
    <string name="edit_profile">Edit profile</string>
    <string name="go_to_settings_and_fill_out_the_profile">Go to settings and fill out the profile</string>
    <string name="password_is_empty">Password is empty</string>
    <string name="password_incorrect">Password must be an 8 symbols or more</string>
    <string name="email_is_empty">Email is empty</string>
    <string name="email_incorrect">This is not an email</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="login">LOGIN</string>
    <string name="login_subtitle">Enter your email and password below</string>
    <string name="login_title">Hello!</string>
    <string name="settings">Settings</string>
    <string name="log_out">Log out</string>
</resources>