<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/MainBackground"
    tools:context=".AuthActivity">

    <TextView
        android:id="@+id/AuthTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/auth_title"
        android:textColor="@color/White"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.26" />

    <TextView
        android:id="@+id/AuthSubtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/auth_subtitle"
        android:textColor="@color/White"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/AuthTitle" />


    <TextView
        android:id="@+id/EmailLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/default_margin"
        android:text="@string/email"
        android:textColor="@color/Gray"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@id/EmailInput"
        app:layout_constraintStart_toStartOf="@id/EmailInput" />

    <EditText
        android:id="@+id/EmailInput"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/medium_margin"
        android:inputType="textEmailAddress"
        android:paddingStart="@dimen/default_margin"
        android:paddingEnd="@dimen/default_margin"
        android:textColor="@color/White"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@id/RegisterBTN"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.466"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/PasswordLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/default_margin"
        android:text="@string/password"
        android:textColor="@color/Gray"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@id/PasswordInput"
        app:layout_constraintStart_toStartOf="@id/EmailInput"
        app:layout_constraintTop_toBottomOf="@id/EmailInput" />

    <EditText
        android:id="@+id/PasswordInput"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/medium_margin"
        android:inputType="textPassword"
        android:padding="@dimen/default_margin"
        android:textColor="@color/White"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/EmailInput" />

    <androidx.appcompat.widget.AppCompatCheckBox
        android:id="@+id/RememberMe"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:text="@string/remember_me"
        android:textColor="@color/White"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@id/PasswordInput"
        app:layout_constraintTop_toBottomOf="@id/PasswordInput" />

    <TextView
        android:id="@+id/BottomText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/medium_margin"
        android:text="@string/already_have_an_account"
        android:textColor="@color/Gray"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/SignInText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/default_margin"
        android:text="@string/sign_in"
        android:textColor="@color/White"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/BottomText"
        app:layout_constraintStart_toEndOf="@id/BottomText"
        app:layout_constraintTop_toTopOf="@id/BottomText" />

    <TextView
        android:id="@+id/WarningText1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/warning1"
        android:textColor="@color/White"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@id/WarningText2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/WarningText2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/warning2"
        android:textColor="@color/White"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@id/BottomText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/RegisterBTN"
        style="@style/register"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_margin="@dimen/medium_margin"
        android:background="@drawable/bordered_button_shape"
        android:backgroundTint="@color/profileButtonsColor"
        android:foreground="?attr/selectableItemBackground"
        android:text="@string/register"
        android:textColor="@color/White"
        android:textSize="22sp"
        app:layout_constraintBottom_toTopOf="@id/WarningText1"
        app:layout_constraintEnd_toEndOf="@id/PasswordInput"
        app:layout_constraintStart_toStartOf="@id/PasswordInput" />

    <TextView
        android:id="@+id/TextBetweenBTNS"
        style="@style/register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/medium_margin"
        android:text="@string/or"
        android:textColor="@color/White"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/RegisterBTN"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <!--    <ImageView-->
    <!--        android:id="@+id/GoogleLogo"-->
    <!--        android:layout_width="40dp"-->
    <!--        android:layout_height="40dp"-->
    <!--        app:layout_constraintStart_toStartOf="@id/GoogleBTN"-->
    <!--        app:layout_constraintEnd_toEndOf="@id/GoogleBTN"-->
    <!--        app:layout_constraintTop_toTopOf="@id/GoogleBTN"-->
    <!--        app:layout_constraintBottom_toBottomOf="@id/GoogleBTN"-->
    <!--        app:layout_constraintHorizontal_bias="0.28"-->
    <!--        android:src="@drawable/logo" />-->

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/GoogleBTN"
        style="@style/register"
        android:layout_width="0dp"
        android:layout_height="57dp"
        android:background="@drawable/button_shape"
        android:backgroundTint="@color/White"
        android:drawableStart="@drawable/logo"
        android:foreground="?attr/selectableItemBackground"
        android:gravity="center"
        android:text="@string/google"
        android:textColor="@color/Black"
        app:layout_constraintBottom_toTopOf="@id/TextBetweenBTNS"
        app:layout_constraintEnd_toEndOf="@id/RegisterBTN"
        app:layout_constraintStart_toStartOf="@id/RegisterBTN" />

<!--    <LinearLayout-->
<!--        android:id="@+id/GoogleBTN"-->
<!--        style="@style/register"-->
<!--        android:layout_width="0dp"-->
<!--        android:layout_height="57dp"-->
<!--        android:background="@drawable/button_shape"-->
<!--        android:backgroundTint="@color/White"-->
<!--        android:orientation="horizontal"-->
<!--        app:layout_constraintBottom_toTopOf="@id/TextBetweenBTNS"-->
<!--        app:layout_constraintEnd_toEndOf="@id/RegisterBTN"-->
<!--        app:layout_constraintStart_toStartOf="@id/RegisterBTN"-->
<!--        android:gravity="center">-->

<!--        <ImageView-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:src="@drawable/logo"/>-->

<!--        <TextView-->
<!--            style="@style/register"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:text="@string/google"-->
<!--            android:textColor="@color/Black"/>-->

<!--    </LinearLayout>-->

</androidx.constraintlayout.widget.ConstraintLayout>

